[Cloud.NET] exception handling
- CHG: "better" exceptions if file or directory does not exist

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,7 @@
 Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/users.ini
 /Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.Test/obj
 /Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.Test/bin
+/Projects/MarcelJoachimKloubert.FileBox/packages
+/Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox/obj
+/Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox/bin
+Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox.v11.suo
