[Cloud.NET] first working alpha of file sync tool

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,4 @@ Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/users.ini
 /Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox/obj
 /Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox/bin
 Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox.v11.suo
+Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/MarcelJoachimKloubert.CloudNET.FileSync.csproj.user
