--- a/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/MarcelJoachimKloubert.CloudNET.FileSync.csproj
+++ b/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/MarcelJoachimKloubert.CloudNET.FileSync.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>app.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,6 +47,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\CloudServer.cs">
+      <Link>SDK\CloudServer.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\Helpers\CollectionHelper.cs">
+      <Link>SDK\Helpers\CollectionHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\Helpers\IOHelper.cs">
+      <Link>SDK\Helpers\IOHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\Helpers\StringHelper.cs">
+      <Link>SDK\Helpers\StringHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\CloudDirectory.cs">
+      <Link>SDK\IO\CloudDirectory.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\CloudDirectoryCollection.cs">
+      <Link>SDK\IO\CloudDirectoryCollection.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\CloudFile.cs">
+      <Link>SDK\IO\CloudFile.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\CloudFileCollection.cs">
+      <Link>SDK\IO\CloudFileCollection.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\ListCloudDirectoryResult.cs">
+      <Link>SDK\IO\ListCloudDirectoryResult.cs</Link>
+    </Compile>
+    <Compile Include="Classes\Sessions\SyncLogEventArgs.cs" />
+    <Compile Include="Classes\Sessions\SyncSession.cs" />
     <Compile Include="Controls\Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,6 +84,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Controls\Forms\MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -82,6 +117,10 @@
       <Name>MarcelJoachimKloubert.CLRToolbox.45</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="app.ico" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
