--- a/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.csproj
+++ b/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>MarcelJoachimKloubert.CloudNET</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44300</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -67,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Helpers\CryptoHelper.cs" />
+    <Compile Include="Classes\Helpers\TimeHelper.cs" />
     <Compile Include="Classes\ICloudApp.cs" />
     <Compile Include="Classes\IO\FileSystemItemBase.cs" />
     <Compile Include="Classes\IO\IDirectory.cs" />
@@ -164,7 +166,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>21359</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:48109/</IISUrl>
+          <IISUrl>https://localhost:44300/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
