--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,4 @@ Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/users.ini
 /Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox/bin
 Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox.v11.suo
 Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/MarcelJoachimKloubert.CloudNET.FileSync.csproj.user
+Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.SDK/MarcelJoachimKloubert.CloudNET.SDK.csproj.user
