--- a/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/MarcelJoachimKloubert.CloudNET.FileSync.csproj
+++ b/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/MarcelJoachimKloubert.CloudNET.FileSync.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET45</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -28,7 +28,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>TRACE;NET45</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +52,9 @@
   <ItemGroup>
     <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\CloudServer.cs">
       <Link>SDK\CloudServer.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\CloudServerObjectBase.cs">
+      <Link>SDK\CloudServerObjectBase.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\Helpers\CollectionHelper.cs">
       <Link>SDK\Helpers\CollectionHelper.cs</Link>
@@ -73,8 +77,21 @@
     <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\CloudFileCollection.cs">
       <Link>SDK\IO\CloudFileCollection.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\CloudFileSystem.cs">
+      <Link>SDK\IO\CloudFileSystem.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\ISyncWithLocalDirectoryExecutionContext.cs">
+      <Link>SDK\IO\ISyncWithLocalDirectoryExecutionContext.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\ListCloudDirectoryResult.cs">
       <Link>SDK\IO\ListCloudDirectoryResult.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\ListCloudDirectoryResult.SyncWithLocalDirectoryExecutionContext.cs">
+      <Link>SDK\IO\ListCloudDirectoryResult.SyncWithLocalDirectoryExecutionContext.cs</Link>
+      <DependentUpon>ListCloudDirectoryResult.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CloudNET.SDK\IO\SyncCloudDirectoryProgressEvent.cs">
+      <Link>SDK\IO\SyncCloudDirectoryProgressEvent.cs</Link>
     </Compile>
     <Compile Include="Classes\Sessions\SyncLogEventArgs.cs" />
     <Compile Include="Classes\Sessions\SyncSession.cs" />
@@ -85,10 +102,19 @@
     <Compile Include="Controls\Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Forms\SyncForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\Forms\SyncForm.Designer.cs">
+      <DependentUpon>SyncForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Forms\SyncForm.resx">
+      <DependentUpon>SyncForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
