Cloud.NET & MetalVZ
- ADD: database / entity framework
- DEL: Debug code
- CHG: code cleanups
- FIX: documentation fixes
- ADD: IPasswordHasher types

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/users.ini
 Projects/MarcelJoachimKloubert.FileBox/MarcelJoachimKloubert.FileBox.v11.suo
 Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.FileSync/MarcelJoachimKloubert.CloudNET.FileSync.csproj.user
 Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.SDK/MarcelJoachimKloubert.CloudNET.SDK.csproj.user
+Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ/config.ini
