--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -864,6 +864,12 @@
       <Link>Security\Cryptography\IHasher.SecureString.cs</Link>
       <DependentUpon>IHasher.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\security\cryptography\passwords\GeneralPasswordHasher.cs">
+      <Link>Security\Cryptography\Passwords\GeneralPasswordHasher.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\security\cryptography\passwords\IPasswordHasher.cs">
+      <Link>Security\Cryptography\Passwords\IPasswordHasher.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\security\UsernamePasswordValidator.cs">
       <Link>Security\UsernamePasswordValidator.cs</Link>
     </Compile>
