Cloud.NET, cleanups, fixes and improvements
- CHG: code improvements
- CHG: code cleanups
- FIX: documentation fixes
- ADD: started to implement Cloud.NET message feature

--- a/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.csproj
+++ b/Projects/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET/MarcelJoachimKloubert.CloudNET.csproj
@@ -103,6 +103,7 @@
     </Compile>
     <Compile Include="Handlers\BasicAuthHttpHandlerBase.cs" />
     <Compile Include="Handlers\FilesHttpHandler.cs" />
+    <Compile Include="Handlers\MessagesHttpHandler.cs" />
     <Compile Include="Masters\Main.Master.cs">
       <DependentUpon>Main.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
