- ADD: streams for "reading" zero or random bytes - CHG: code cleanups and improvements

--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,7 @@ Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ/config.ini
 /Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.Database/obj
 Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.Database/MarcelJoachimKloubert.MetalVZ.Database.sqlproj.user
 Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.Database/MarcelJoachimKloubert.MetalVZ.Database.dbmdl
+Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/config.ini
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.MySqlImport/bin
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.MySqlImport/obj
+/Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.MySqlImport/config.ini
