- ADD: CryptCommander project

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,6 @@ Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/con
 /Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.MySqlImport/bin
 /Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.MySqlImport/obj
 /Projects/MarcelJoachimKloubert.MetalVZ/MarcelJoachimKloubert.MetalVZ.MySqlImport/config.ini
+/Projects/MarcelJoachimKloubert.CryptCommander/MarcelJoachimKloubert.CryptCommander.v11.suo
+/Projects/MarcelJoachimKloubert.CryptCommander/MarcelJoachimKloubert.CryptCommander/obj
+/Projects/MarcelJoachimKloubert.CryptCommander/MarcelJoachimKloubert.CryptCommander/bin
