replace GitThemAll project with RoboGit

--- a/.gitignore
+++ b/.gitignore
@@ -227,3 +227,8 @@ Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/con
 /Projects/MarcelJoachimKloubert.CryptCommander/MarcelJoachimKloubert.CryptCommander.v11.suo
 /Projects/MarcelJoachimKloubert.CryptCommander/MarcelJoachimKloubert.CryptCommander/obj
 /Projects/MarcelJoachimKloubert.CryptCommander/MarcelJoachimKloubert.CryptCommander/bin
+/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit/config.ini
+/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit/obj
+/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit/bin
+/Projects/MarcelJoachimKloubert.RoboGit/packages
+Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit.v11.suo
