--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,5 @@ Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/con
 /Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit/bin
 /Projects/MarcelJoachimKloubert.RoboGit/packages
 Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit.v11.suo
+/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/obj
+/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/bin
