RoboGit, logger framework, cleanups, improvements and fixes
- ADD: started to implement git GUI (RoboGit)
- ADD: global logger class and console logger for fast and common use
- CHG: code cleanups and improvements
- FIX: collecting log categories
- FIX: documentation fixes

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -113,9 +113,11 @@
     <Compile Include="Data\IDataConnection.cs" />
     <Compile Include="Data\TMColumnAttribute.cs" />
     <Compile Include="Data\TMTableAttribute.cs" />
+    <Compile Include="Diagnostics\GlobalLogger.cs" />
     <Compile Include="Diagnostics\ILogMessage.dotNET.cs">
       <DependentUpon>ILogMessage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Diagnostics\Impl\ConsoleLogger.cs" />
     <Compile Include="Diagnostics\LoggerFacadeBase.LogMessage.dotNET.cs">
       <DependentUpon>LoggerFacadeBase.cs</DependentUpon>
     </Compile>
