--- a/.gitignore
+++ b/.gitignore
@@ -234,3 +234,4 @@ Projects/MarcelJoachimKloubert.ServerAdmin/MarcelJoachimKloubert.ServerAdmin/con
 Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit.v11.suo
 /Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/obj
 /Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/bin
+Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGit.v12.suo
