--- a/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj
@@ -232,6 +232,9 @@
       <Link>Diagnostics\Execution\LogCommandBase.LogCommandExecutionResult.cs</Link>
       <DependentUpon>LogCommandBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Diagnostics\GlobalLogger.cs">
+      <Link>Diagnostics\GlobalLogger.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Diagnostics\ILoggerFacade.cs">
       <Link>Diagnostics\ILoggerFacade.cs</Link>
     </Compile>
@@ -255,6 +258,9 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Diagnostics\Impl\AsyncLogger.OnLog.cs">
       <Link>Diagnostics\Impl\AsyncLogger.OnLog.cs</Link>
       <DependentUpon>AsyncLogger.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Diagnostics\Impl\ConsoleLogger.cs">
+      <Link>Diagnostics\Impl\ConsoleLogger.cs</Link>
     </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\diagnostics\impl\DelegateLogger.cs">
       <Link>Diagnostics\Impl\DelegateLogger.cs</Link>
