--- a/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/MarcelJoachimKloubert.RoboGitGui.csproj
+++ b/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/MarcelJoachimKloubert.RoboGitGui.csproj
@@ -47,6 +47,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\GitTask.cs" />
+    <Compile Include="Classes\GitTask.Logger.cs">
+      <DependentUpon>GitTask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\GitTask.Pull.cs">
+      <DependentUpon>GitTask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\GitTask.Push.cs">
+      <DependentUpon>GitTask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\GitTaskControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Classes\GitTaskControl.Designer.cs">
+      <DependentUpon>GitTaskControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\GitTaskLogEventArgs.cs" />
+    <Compile Include="Classes\GitTaskMethod.cs" />
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,6 +73,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Classes\GitTaskControl.resx">
+      <DependentUpon>GitTaskControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -70,7 +91,7 @@
     <EmbeddedResource Include="LICENSE" />
     <None Include="..\MarcelJoachimKloubert.RoboGit\config.ini">
       <Link>config.ini</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
