added AppTime class

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppTime.cs" />
     <Compile Include="Caching\DelegateCache.CachedItem.cs">
       <DependentUpon>DelegateCache.cs</DependentUpon>
     </Compile>
