--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -61,6 +61,9 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\AppTime.cs">
+      <Link>AppTime.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Caching\DelegateCache.CachedItem.cs">
       <Link>Caching\DelegateCache.CachedItem.cs</Link>
       <DependentUpon>DelegateCache.cs</DependentUpon>
